--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
 
         <d1>
             <dt> Introduction to HTML </dt>
+            <dd>
+                <a href="https://jphomm-1966636.github.io/HTML_Assessments/Letter_Markup/"> Letter Markup </a><br/>
+                <a href="https://jphomm-1966636.github.io/HTML_Assessments/Page_Structure/"> Structure Page </a>
+            </dd>
+            <dt> Multimedia and Embedding </dt>
+            <dd>
+                <a href="https://jphomm-1966636.github.io/HTML%20Assessments/Splash/"> Splash Page </a>
+            </dd>
         </d1>
 
 
