--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
         <d1>
             <dt> Introduction to HTML </dt>
             <dd>
-                <a href="https://jphomm-1966636.github.io/HTML_Assessments/Letter_Markup/"> Letter Markup </a><br/>
-                <a href="https://jphomm-1966636.github.io/HTML_Assessments/Page_Structure/"> Structure Page </a>
+                <a href="https://github.com/jphomm-1966636/HTML_Assesments/blob/f2ef5ac641dc2602399c1f7a8bce40be9423d6e0/Letter_Markup/index.html"> Letter Markup </a><br/>
+                <a href="https://github.com/jphomm-1966636/HTML_Assesments/blob/f2ef5ac641dc2602399c1f7a8bce40be9423d6e0/Page_Structure/index.html"> Structure Page </a>
             </dd>
             <dt> Multimedia and Embedding </dt>
             <dd>
-                <a href="https://jphomm-1966636.github.io/HTML%20Assessments/Splash/"> Splash Page </a>
+                <a href="https://github.com/jphomm-1966636/HTML_Assesments/blob/f2ef5ac641dc2602399c1f7a8bce40be9423d6e0/Splash/index.html"> Splash Page </a>
             </dd>
         </d1>
 
